# Pur-Beurre

./: .coverage  .gitignore  .mergify.yml  .travis.yml  Procfile  manage.py  pyproject.toml  readme.md  requirements.txt  update_pur_beurre.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
Report/: P8_01_Demarche.odt  Presentation.md  Report.md
config/: asgi.py  settings.py  urls.py  views.py  wsgi.py
config/settings/: base.py  local.py  production.py  travis.py
generic/: apps.py  urls.py  views.py
homepage/: apps.py  custom_http_response.py  urls.py  views.py
homepage/templatetags/: filters.py
openfoodfacts/: api.py  apps.py  feed_db.py  tests.py
product/: forms.py  models.py  urls.py  views.py
product/fixtures/: category.json  favorite.json  product.json
product/migrations/: 0001_initial.py  0002_auto_20200708_1137.py  0002_auto_20200710_1319.py  0002_auto_20200710_2224.py  0003_auto_20200709_0017.py  0003_auto_20200710_2226.py  0004_auto_20200712_1325.py  0005_auto_20200720_1042.py  0006_auto_20200720_1055.py  0007_auto_20200720_1152.py  0008_auto_20200720_1526.py  0009_auto_20200721_1053.py  0010_favorite.py  0011_auto_20200722_1347.py  0012_auto_20200722_1348.py  0013_auto_20200726_2010.py  0014_auto_20200726_2015.py
product/models/: __init__.py  category.py  favorite.py  product.py
project_doc/report/: Presentation.md
report/: P8_01_Demarche.odt  Report.md
search/: forms.py  urls.py  views.py
static/: package-lock.json  package.json
templates/: 403.html  404.html  500.html  base.html
tests/: custom.py
tests/homepage/: test_views.py
tests/openfoodfacts/: test_api.py  test_feed_db.py
tests/product/: test_category_models.py  test_favorite_models.py  test_forms.py  test_product_manager.py  test_product_models.py  test_views.py
tests/search/: test_views.py
tests/users/: test_models.py  test_views.py
user/: forms.py  models.py  urls.py  views.py
user/templatetags/: user_extras.py
users/: forms.py  models.py  urls.py  views.py
users/fixtures/: user.json
users/migrations/: 0001_initial.py  0002_auto_20200707_1500.py  (+8 more)
(+35 files in other folders)
