[tool.poetry]
name = "nutella"
version = "0.1.0"
description = ""
authors = ["GuillaumeO <7831777+GuillaumeOj@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"
gunicorn = "^20.0.4"
dj-database-url = "^0.5.0"
whitenoise = "^5.1.0"
psycopg2 = "^2.8.5"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8-django = "^1.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
