[tool.poetry]
name = "nutella"
version = "0.1.0"
description = ""
authors = ["GuillaumeO <7831777+GuillaumeOj@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.0.4"
dj-database-url = "^0.5.0"
whitenoise = "^5.1.0"
psycopg2 = "^2.8.5"
django = "^3.1.7"
requests = "^2.25.1"
python-dotenv = "^0.15.0"
progress = "^1.5"
black = "^20.8b1"
isort = "^5.7.0"
flake8-django = "^1.1.1"
sentry-sdk = "^0.20.3"

[tool.poetry.dev-dependencies]
docformatter = "^1.4"
coverage = "^5.4"

[tool.black]
line-length = 90

[tool.isort]
force_single_line = true
lines_after_imports = 2
force_sort_within_sections = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

