[tool.poetry]
name = "nutella"
version = "0.1.0"
description = ""
authors = ["GuillaumeO <7831777+GuillaumeOj@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
whitenoise = "^5.1.0"
psycopg2 = "^2.8.5"
django = "^3.2"
requests = "^2.25.1"
python-dotenv = "^0.17.1"
progress = "^1.5"
black = "^21.6b0"
isort = "^5.8.0"
flake8-django = "^1.1.2"
sentry-sdk = "^1.1.0"

[tool.poetry.dev-dependencies]
docformatter = "^1.4"
coverage = "^5.5"

[tool.black]
line-length = 90

[tool.isort]
force_single_line = true
lines_after_imports = 2
force_sort_within_sections = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

